--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.2.10
+certifi==2020.6.20
+cloudinary==1.22.0
 Django==3.1.2
 django-bootstrap3==14.2.0
 django-crispy-forms==1.9.2
 pytz==2020.1
+six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.4.1
+urllib3==1.25.10
