--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cloudinary==1.22.0
 Django==3.1.2
 django-bootstrap3==14.2.0
 django-crispy-forms==1.9.2
+Pillow==8.0.0
+python-decouple==3.3
 pytz==2020.1
 six==1.15.0
 soupsieve==2.0.1
