--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.1.2
 django-bootstrap3==14.2.0
 django-crispy-forms==1.9.2
 Pillow==8.0.0
+psycopg2==2.8.6
 python-decouple==3.3
 pytz==2020.1
 six==1.15.0
