--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.2.10
 certifi==2020.6.20
 cloudinary==1.22.0
+dj-database-url==0.5.0
 Django==3.1.2
-django-bootstrap3==14.2.0
 django-crispy-forms==1.9.2
+django-heroku==0.3.1
 Pillow==8.0.0
 psycopg2==2.8.6
 python-decouple==3.3
@@ -12,3 +13,4 @@ six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.4.1
 urllib3==1.25.10
+whitenoise==5.2.0
