--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 Django==3.1.2
 django-crispy-forms==1.9.2
 django-heroku==0.3.1
+gunicorn==20.0.4
 Pillow==8.0.0
 psycopg2==2.8.6
 python-decouple==3.3
